--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Anze's webpage</title>
+        <title>Search</title>
     </head>
     <body>
-        <h1>
-            Welcome to my first webpage!
-        </h1>
+        <form action="https://www.google.com/search">
+            <input type="text" name="q">
+            <input type="submit" value="Google Search">
+        </form>
     </body>
 </html>
