--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <form action="https://www.google.com/search">
+        <div id="topright">
+            <a href="https://images.google.com/">Google Images</a>
+            <a href="https://www.google.com/advanced_search">Advanced search</a>
+        </div>
+        <img id="logo" src="https://www.google.co.uk/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+        <form id="center" action="https://www.google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
+
     </body>
 </html>
