--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="topright">
-            <a href="https://images.google.com/">Google Images</a>
+            <a href="images.html">Google Images</a>
             <a href="https://www.google.com/advanced_search">Advanced search</a>
         </div>
         <img id="logo" src="https://www.google.co.uk/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
