--- a/images.html
+++ b/images.html
@@ -12,7 +12,7 @@
         <img id="logo" src="https://www.google.co.uk/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
         <form id="center" action="https://images.google.com/search">
             <input type="text" name="q">
-            <input type="submit" value="Google Search">
+            <input type="submit" value="Google Image Search">
         </form>
 
     </body>
